apps/k3s/rancher/rancher-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.k3s.zadar.family`) # change to your domain
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    secretName: zadar-family-tls # change to your cert name
